# Competitive2048

./: README.md  demo.txt  graph.py  main.py  pyproject.toml
assets/: CS4701FinalReport.html
comp2048/: __init__.py  env.py
comp2048/alphazero/: Arena.py  Coach.py  Game.py  MCTS.py  NeuralNet.py  pit.py  train.py
comp2048/alphazero/temp_cpu/: train_data_10.json  train_data_20.json
comp2048/models/: Comp2048NNet.py  Comp2048Players.py  NNet.py
comp2048/utils/: utils.py
competitive2048.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
