[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "competitive2048"
version = "0.1.0"
description = "A zero-sum variant of the game 2048."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "coloredlogs>=15.0.1",
    "gym==0.25.2",
    "numpy==1.23.4",
    "torch==1.13.1",
    "tqdm>=4.67.1",
]

[tool.setuptools]
packages = ["comp2048"]

[tool.setuptools.package-data]
"comp2048.alphazero.temp_cpu" = ["*.pth.tar", "*.json"]
"comp2048.alphazero.temp_gpu" = ["*.pth.tar"]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
